--- a/sites/all/modules/migrate/CHANGELOG.txt
+++ b/sites/all/modules/migrate/CHANGELOG.txt
@@ -1,12 +1,41 @@
 
-Migrate 2.4 Beta 1
-==================
+Migrate 2.4
+===========
 
 IMPORTANT: The file migration support (both MigrateDestinationFile and
-the file field handler) has been completely refactored for this release - if you
+the file field handler) has been completely refactored since Migrate 2.3 - if you
 are importing files as part of your migration, you MUST change your migrations
 to properly use the new implementation. See http://drupal.org/node/1540106 for
 details on how to use the new handlers and destination.
+
+Features and enhancements
+- #1606586 - Add activeUrl public method to MigrateSourceXML.
+
+Bug fixes
+- #1614318 - MigrateFileUri failed to pass file object through.
+- #1601974 - Remove percent sign fix-up, leave to particular application.
+- #1600912 - Base constructor was undermining UI override of displayFunction.
+- #1595056 - Handle empty arguments from migrate_status table.
+- #1595166 - Support multiple source keys in MigrateList.
+
+Migrate 2.4 Release Candidate 1
+===============================
+
+Features and enhancements
+- #1587842 - Remove sample CSV files from migrate project.
+- #1152878 - drush migrate-analyze command, for source data analysis.
+- #1587566 - Support escape option for CSV sources on PHP 5.3.
+- #1189328 - UI option to ignore dependencies.
+- #1016452 - Support migrating user role assignments by name.
+- #653636 - Add migrate-messages command to dump message table.
+
+Bug fixes
+- #919108 - Cleaner error-handling when updating destinations that don't exist.
+- #1574502 - Coder review, remove dead code.
+- #1570536 - Undefined property in term.inc.
+
+Migrate 2.4 Beta 1
+==================
 
 Features and enhancements
 - #1428166 - Make message columns sortable.
