--- a/sites/all/translations/link-7.x-1.0.nb.po
+++ b/sites/all/translations/link-7.x-1.0.nb.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Link (7.x-1.0)\n"
-"POT-Creation-Date: 2012-09-11 22:12+0000\n"
+"POT-Creation-Date: 2012-11-07 09:08+0000\n"
 "PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
 "Language-Team: Norwegian Bokmål\n"
 "MIME-Version: 1.0\n"
@@ -20,6 +20,16 @@ msgid "Link Target"
 msgstr "Lenkemål"
 msgid "URL"
 msgstr "URL"
+msgid "Placeholder tokens"
+msgstr "Plassholder-symboler"
+msgid ""
+"The following placeholder tokens can be used in both paths and titles. "
+"When used in a path or title, they will be replaced with the "
+"appropriate values."
+msgstr ""
+"Følgende plassholder-symboler kan benyttes i både stier og titler. "
+"Når de brukes i en sti eller en tittel vil de bli erstattet med "
+"passende verdier."
 msgid "Optional Title"
 msgstr "Valgfri Tittel"
 msgid "Required Title"
@@ -28,20 +38,112 @@ msgid "No Title"
 msgstr "Ingen Tittel"
 msgid "Link Title"
 msgstr "Lenketittel"
+msgid "URL Display Cutoff"
+msgstr "URL visningsforkorting"
+msgid ""
+"If the user does not include a title for this link, the URL will be "
+"used as the title. When should the link title be trimmed and finished "
+"with an elipsis (&hellip;)? Leave blank for no limit."
+msgstr ""
+"Dersom brukeren ikke legger inn en tittel for denne lenken, vil URLen "
+"bli brukt som tittel. Når skal lenke-tittelen forkortes og avsluttes "
+"med ellipsis (&hellip;)? La være tomt for ingen grense."
+msgid "Default (no target attribute)"
+msgstr "Standard (ikke noe mål-attributt)"
+msgid "Open link in window root"
+msgstr "Åpne lenke i rot-vindu"
 msgid "Open link in new window"
 msgstr "Åpne lenke i nytt vindu"
+msgid "Allow the user to choose"
+msgstr "La brukeren velge"
+msgid "Additional CSS Class"
+msgstr "Ekstra CSS-klasse"
 msgid "Not a valid URL."
 msgstr "Ikke en gyldig URL"
+msgid "Titles are required for all links."
+msgstr "Alle lenker krever titler"
+msgid "Open URL in a New Window"
+msgstr "Åpne URL i et Nytt Vindu"
+msgid "Defines simple link field types."
+msgstr "Definerer enkel lenke felt-typer"
 msgid "Fields"
 msgstr "Felt"
+msgid "Link URL"
+msgstr "Lenke-URL"
 msgid "Wildcard"
 msgstr "Jokertegn"
 msgid "="
 msgstr "="
+msgid "Protocol"
+msgstr "Protokoll"
+msgid "Optional URL"
+msgstr "Valgfri URL"
+msgid ""
+"If the link title is optional or required, a field will be displayed "
+"to the end user. If the link title is static, the link will always use "
+"the same title. If <a href=\"http://drupal.org/project/token\">token "
+"module</a> is installed, the static title value may use any other node "
+"field as its value. Static and token-based titles may include most "
+"inline XHTML tags such as <em>strong</em>, <em>em</em>, <em>img</em>, "
+"<em>span</em>, etc."
+msgstr ""
+"Dersom lenketittelen er valgfri eller påkrevet vil et felt bli vist "
+"for sluttbrukeren. Dersom tittelen er statisk vil lenken alltid bli "
+"vist med den samme tittelen. Dersom <a "
+"href=\"http://drupal.org/project/token\">token-modulen</a> er "
+"installert kan lenketittelen bruke et annet nodefelt som verdi. "
+"Statiske titler og titler basert på plassholder (token) kan inneholde "
+"de fleste felt på linjem som <em>strong</em>, <em>em</em>, "
+"<em>img</em>, <em>span</em>, osv."
+msgid "Allow user-entered tokens"
+msgstr "Tillat brukerinnlagte plassholdere"
+msgid ""
+"Checking will allow users to enter tokens in URLs and Titles on the "
+"node edit form. This does not affect the field settings on this page."
+msgstr ""
+"Avkryssing vil tillate brukere å legge inn plassholdere i URLer og "
+"Titler i skjemaet for å redigere en node. Dette har ingen effekt på "
+"felt-inntillingene for denne siden."
+msgid "Rel Attribute"
+msgstr "Rel Attributt"
+msgid ""
+"When output, this link will have this rel attribute. The most common "
+"usage is <a "
+"href=\"http://en.wikipedia.org/wiki/Nofollow\">rel=&quot;nofollow&quot;</a> "
+"which prevents some search engines from spidering entered links."
+msgstr ""
+"Når den brukes vil denne lenken ah dette rel-attributtet. Den "
+"vanligste bruken er <a "
+"href=\"http://en.wikipedia.org/wiki/Nofollow\">rel=&quot;nofollow&quot;</a> "
+"som forhindre noen søkemotor-roboter å følge lenker."
+msgid "At least one title or URL must be entered."
+msgstr "Minst en URL må legges inn"
+msgid "You cannot enter a title without a link url."
+msgstr "Du kan ikke legge inn en tittel uten en lenke-url"
+msgid "Title, as link (default)"
+msgstr "Tittel, som lenke (standard)"
+msgid "URL, as link"
+msgstr "URL, som lenke"
+msgid "Short, as link with title \"Link\""
+msgstr "Kort, som lenke med tittel \"Lenke\""
+msgid "Label, as link with label as title"
+msgstr "Etikett, som lenke med etikett som tittel"
+msgid "Separate title and URL"
+msgstr "Separat tittel og URL"
 msgid "Validator"
 msgstr "Kontrollør"
 msgid "Is one of"
 msgstr "Er en av"
+msgid ""
+"The title to use when this argument is present; it will override the "
+"title of the view and titles from previous arguments. You can use "
+"percent substitution here to replace with argument titles. Use \"%1\" "
+"for the first argument, \"%2\" for the second, etc."
+msgstr ""
+"Tittelen som skal brukes når dette argumentet er til stede; det vil "
+"overstyre view-tittelen og titler fra tidligere argumenter. Du kan "
+"bruke prosent-erstatning for å bytte ut med argument-titler. Bruk "
+"\"%1\" for det første argumentet, \"%2\" for den andre, osv."
 msgid "Action to take if argument is not present"
 msgstr "Handling som skal utføres dersom argumentet mangler"
 msgid ""
@@ -55,10 +157,105 @@ msgstr "Jokertittel"
 msgid "The title to use for the wildcard in substitutions elsewhere."
 msgstr "Tittelen som skal brukes for jokertegnet i erstatninger andre steder."
 msgid "<Basic validation>"
-msgstr "<Grunnleggende kontroll>"
+msgstr "&lt;Grunnleggende kontroll&gt;"
 msgid "Action to take if argument does not validate"
 msgstr ""
 "Handling som skal utføres dersom argumentet ikke kommer gjennom "
 "kontrollen"
+msgid ""
+"The protocols displayed here are those globally available. You may add "
+"more protocols by modifying the <em>filter_allowed_protocols</em> "
+"variable in your installation."
+msgstr ""
+"Protokollene som vises her er de som er globalt tilgjengelig. Du kan "
+"legge til flere protokoller med å endre variablen "
+"<em>filter_allowed_protocols</em> i din installasjon."
+msgid "Link title"
+msgstr "Lenketittel"
+msgid "Formatted html link"
+msgstr "Formatert html-lenke"
+msgid ""
+"Store a title, href, and attributes in the database to assemble a "
+"link."
+msgstr ""
+"Lagre en tittel, href, og attributter i databasen for å sette sammen "
+"en lenke."
+msgid "URL, as plain text"
+msgstr "URL, som ren tekst"
 msgid "Validate URL"
 msgstr "Valider URL"
+msgid ""
+"If checked, the URL field will be verified as a valid URL during "
+"validation."
+msgstr ""
+"Dersom det er krysset av, vil URL-feltet bli kontrollert for å "
+"undersøke om det er en gyldig URL under validering."
+msgid ""
+"If checked, the URL field is optional and submitting a title alone "
+"will be acceptable. If the URL is omitted, the title will be displayed "
+"as plain text."
+msgstr ""
+"Dersom det er krysset av vil URL-feltet være valgfritt og å legge "
+"inn en tittel alene vil bli godtatt.  Dersom URLen er utelatt vil "
+"tittelen bli vist som ren tekst."
+msgid ""
+"When output, this link will have this class attribute. Multiple "
+"classes should be separated by spaces."
+msgstr ""
+"Når den vises vil denne lenken ha dette klasse-attributtet. Multiple "
+"klasser må skilles med blanke."
+msgid "Title, as plain text"
+msgstr "Tittel, som ren tekst"
+msgid "Static Title"
+msgstr "Statisk Tittel"
+msgid "Static title"
+msgstr "Statisk tittel"
+msgid ""
+"This title will always be used if &ldquo;Static Title&rdquo; is "
+"selected above."
+msgstr ""
+"Denne tittelen vil alltid bli brukt dersom &ldquo;Statisk "
+"Tittel&rdquo; er valgt over."
+msgid "A default title must be provided if the title is a static value."
+msgstr "En standardtittel må angis dersom tittelen er en statisk verdi."
+msgid "Allow the user to enter a link 'title' attribute"
+msgstr "La brukeren legge inn 'tittel'-attributt for lenke"
+msgid "Default link 'title' Attribute"
+msgstr "Standard 'tittel'-attributt for lenke"
+msgid ""
+"When output, links will use this \"title\" attribute if the user does "
+"not provide one and when different from the link text. Read <a "
+"href=\"http://www.w3.org/TR/WCAG10-HTML-TECHS/#links\">WCAG 1.0 "
+"Guidelines</a> for links comformances. Tokens values will be "
+"evaluated."
+msgstr ""
+"Når de vises vil lenker bruke \"tittel\"-attributtet dersom brukeren "
+"ikke legger inn tittel og når denne skiller seg fra lenke-teksten. "
+"Les <a href=\"http://www.w3.org/TR/WCAG10-HTML-TECHS/#links\">WCAG 1.0 "
+"Guidelines</a> for å se hva som er en god tittel. "
+"Plassholder-symboler vil bli evaluert."
+msgid "Link \"title\" attribute"
+msgstr "\"Tittel\"-attributt for lenke"
+msgid "Instance settings have been set with the data from the field settings."
+msgstr "Instansen har blitt satt opp med data fra felt-innstillingene"
+msgid "Max length of title field"
+msgstr "Maksimal lengde av tittelfeltet"
+msgid ""
+"Set a maximum length on the title field (applies only if Link Title is "
+"optional or required).  The maximum limit is 255 characters."
+msgstr ""
+"Sett en maksimal lengde for tittel-feltet (brukes bare dersom "
+"Lenketittel er valgfri eller påkrevet). Den maksimale grensen er 255 "
+"tegn."
+msgid "URL Display Cutoff value must be numeric."
+msgstr "URL visningsforkorting må være et tall"
+msgid "The max length of the link title must be numeric."
+msgstr "Den maksimale lengden må være et tall"
+msgid ""
+"The max length of the link title cannot be greater than 255 "
+"characters."
+msgstr "En lenketittel kan ikke være lenger enn 255 tegn"
+msgid "The title of the link."
+msgstr "Lenkens tittel"
+msgid "The URL of the link."
+msgstr "Lenkens URL"
